[gd_scene load_steps=3 format=3 uid="uid://cc6xxx0w5tnn4"]

[ext_resource type="Script" path="res://addons/behavior_tree/graph/bt_editor.gd" id="1_ese4v"]
[ext_resource type="Script" path="res://addons/behavior_tree/graph/bt_graph_edit.gd" id="2_xfej3"]

[node name="Editor" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ese4v")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Left" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="TopBar/Left"]
visible = false
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "new Behavior Tree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="SaveButton" type="Button" parent="TopBar/Right"]
layout_mode = 2
text = "Save"

[node name="SaveAsButton" type="Button" parent="TopBar/Right"]
layout_mode = 2
text = "Save As"

[node name="LoadButton" type="Button" parent="TopBar/Right"]
layout_mode = 2
text = "Load"

[node name="NewButton" type="Button" parent="TopBar/Right"]
layout_mode = 2
text = "New"

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
arrange_nodes_button_hidden = true
script = ExtResource("2_xfej3")
